--- a/detail-page/how-to-keep-your-subaru-alive.html
+++ b/detail-page/how-to-keep-your-subaru-alive.html
@@ -13,7 +13,7 @@
 
 -->
 <head>
-  <link rel="stylesheet" href="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/styles/styles.css" type="text/css">
+  <link rel="stylesheet" href="/styles/styles.css" type="text/css">
 
   <!-- FAVICON -->
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-  <a href="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/index.html">
+  <a href="/index.html">
     <h2 id='LS-title' aria="Home" class="section-title"><span>LIFTED SUBARUS</span></h2>
     <p style="margin-top:-25px;font-size:.6em;" class="section-title">Curated Offroad Subaru Build Guides</p>
   </a>
@@ -59,10 +59,10 @@
     <section class="details">
         <h1 class="details-headline">How To Keep Your Subaru Alive</h1>
          <p class="details-author">by Larry Owens</p>
-          <a href="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/static/pdf/howToKeepYourSubaruAlive.pdf" class="btn grey-background">PDF Archive</a>
+          <a href="/static/pdf/howToKeepYourSubaruAlive.pdf" class="btn grey-background">PDF Archive</a>
 
         <div class="details-content">
-            <img  src="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/static/img/guides/howtokeepyoursubaruAlive.png">
+            <img  src="/static/img/guides/howtokeepyoursubaruAlive.png">
           <p>This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</p>
         </div>
     </section>
@@ -77,7 +77,7 @@
       <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the Video Content, which is provided as is, and without warranties.</p>
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-08.12.18-02.02</p>
+      <p >v1-08.12.18-02.54</p>
     </a>
   </footer>
 
@@ -85,8 +85,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script src="https://unpkg.com/muuri@0.6.2/dist/muuri.js"></script>
-  <script src="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/scripts/script.js"></script>
-  <script src="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/scripts/accordion.js"></script>
+  <script src="/scripts/script.js"></script>
+  <script src="/scripts/accordion.js"></script>
 
 </body>
 
