--- a/list.html
+++ b/list.html
@@ -13,7 +13,7 @@
 
 -->
 <head>
-  <link rel="stylesheet" href="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/styles/styles.css" type="text/css">
+  <link rel="stylesheet" href="/styles/styles.css" type="text/css">
 
   <!-- FAVICON -->
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-  <a href="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/index.html">
+  <a href="/index.html">
     <h2 id='LS-title' aria="Home" class="section-title"><span>LIFTED SUBARUS</span></h2>
     <p style="margin-top:-25px;font-size:.6em;" class="section-title">Curated Offroad Subaru Build Guides</p>
   </a>
@@ -57,7 +57,7 @@
 
 
     <section class="list">
-      <a style="float:right;" href='file:///Users/honzie/Documents/personal/liftedsubaru.github.io/index.html'>View as Grid</a>
+      <a style="float:right;" href='/index.html'>View as Grid</a>
       <table id="listView">
       <tr>
         <th>TITLE</th>
@@ -74,16 +74,6 @@
         <td>  </td>
       </tr>
       <tr>
-        <td>Advice for Longer CV Joints Life</td>
-        <td>
-            <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
-        Loyale 2.7 Turbo
-            </a>
-      </td>
-        <td> <a href="https://www.ultimatesubaru.org/forum/topic/114267-advice-for-longer-cv-joints-life/" class="btn grey-background">Link</a>  </td>
-        <td>  <a href="/static/pdf/AdviceforLongerCVJointsLife.pdf" class="btn grey-background">PDF</a>  </td>
-      </tr>
-      <tr>
         <td>Bumper Cutting</td>
         <td>
             <a href="https://www.instagram.com/k12azy13astard/">
@@ -92,6 +82,16 @@
       </td>
         <td> <a href="https://m.imgur.com/a/k516H" class="btn grey-background">Link</a>  </td>
         <td>  </td>
+      </tr>
+      <tr>
+        <td>Advice for Longer CV Joints Life</td>
+        <td>
+            <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
+        Loyale 2.7 Turbo
+            </a>
+      </td>
+        <td> <a href="https://www.ultimatesubaru.org/forum/topic/114267-advice-for-longer-cv-joints-life/" class="btn grey-background">Link</a>  </td>
+        <td>  <a href="/static/pdf/AdviceforLongerCVJointsLife.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
         <td>Safe Recovery Technique</td>
@@ -110,14 +110,6 @@
         <td>  <a href="/static/pdf/bendin_tubeindex.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
-        <td>Cars101.com</td>
-        <td>
-        Joe Spitz
-      </td>
-        <td> <a href="http://www.cars101.com" class="btn grey-background">Link</a>  </td>
-        <td>  </td>
-      </tr>
-      <tr>
         <td>DIY: Swing Away Bumper</td>
         <td>
             <a href="https://americanadventurist.com/forum/members/fozroamer.3034/">
@@ -126,6 +118,14 @@
       </td>
         <td> <a href="https://americanadventurist.com/forum/threads/subaru-forester-rear-front-bumper-build-pics.3788/" class="btn grey-background">Link</a>  </td>
         <td>  <a href="/static/pdf/subaru-forester-rear-front-bumper-build-pics.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
+        <td>Cars101.com</td>
+        <td>
+        Joe Spitz
+      </td>
+        <td> <a href="http://www.cars101.com" class="btn grey-background">Link</a>  </td>
+        <td>  </td>
       </tr>
       <tr>
         <td>VIDEO: How-To Tune a CB Antennae</td>
@@ -186,16 +186,6 @@
         <td>  <a href="/static/pdf/EJ22-Overhaul.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
-        <td>2nd Gen Forester Snorkle</td>
-        <td>
-            <a href="https://www.instagram.com/brianlipke">
-        
-            </a>
-      </td>
-        <td>  </td>
-        <td>  </td>
-      </tr>
-      <tr>
         <td>Fuel Injector Cleaning</td>
         <td>
             <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
@@ -204,6 +194,16 @@
       </td>
         <td> <a href="https://www.ultimatesubaru.org/forum/topic/151458-easy-fuel-injector-cleansing-procedures/" class="btn grey-background">Link</a>  </td>
         <td>  <a href="/static/pdf/easy-fuel-injector-cleansing-procedures.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
+        <td>2nd Gen Forester Snorkle</td>
+        <td>
+            <a href="https://www.instagram.com/brianlipke">
+        
+            </a>
+      </td>
+        <td>  </td>
+        <td>  </td>
       </tr>
       <tr>
         <td>DIY Head Porting</td>
@@ -232,6 +232,14 @@
         <td>  <a href="/static/pdf/Hitachicarburetor.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
+        <td>How To Keep Your Subaru Alive</td>
+        <td>
+        Larry Owens
+      </td>
+        <td>  </td>
+        <td>  <a href="/static/pdf/howToKeepYourSubaruAlive.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
         <td>Ignition Module Testing</td>
         <td>
             <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
@@ -240,14 +248,6 @@
       </td>
         <td> <a href="https://www.ultimatesubaru.org/forum/topic/129601-how-to-easily-test-an-ignition-module/" class="btn grey-background">Link</a>  </td>
         <td>  <a href="/static/pdf/how-to-easily-test-an-ignition-module.pdf" class="btn grey-background">PDF</a>  </td>
-      </tr>
-      <tr>
-        <td>How To Keep Your Subaru Alive</td>
-        <td>
-        Larry Owens
-      </td>
-        <td>  </td>
-        <td>  <a href="/static/pdf/howToKeepYourSubaruAlive.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
         <td>DIY: Welded Differential</td>
@@ -306,7 +306,7 @@
       <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the Video Content, which is provided as is, and without warranties.</p>
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-08.12.18-02.02</p>
+      <p >v1-08.12.18-02.54</p>
     </a>
   </footer>
 
@@ -314,8 +314,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script src="https://unpkg.com/muuri@0.6.2/dist/muuri.js"></script>
-  <script src="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/scripts/script.js"></script>
-  <script src="file:///Users/honzie/Documents/personal/liftedsubaru.github.io/scripts/accordion.js"></script>
+  <script src="/scripts/script.js"></script>
+  <script src="/scripts/accordion.js"></script>
 
 </body>
 
