--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Lifted Subarus</title>
-  <meta name=”description” content="Curated Offroad Subaru Build Guides.">
+  <title>Lifted Subarus- Curated Offroad Subaru Build Guides & Resources</title>
+  <meta name=:description" content="Curated Offroad Subaru Build Guides.">
   <meta name="Keywords" content="lifted subaru offroad fabrication 4x4">
   <!--  Facebook -->
   <meta property="og:title" content="Lifted Subarus " />
@@ -48,7 +48,7 @@
     <p>Stay Muddy Friends,</p>
     <p>-Doug</p>
 
-    <img style="margin:0 auto;display:block; width:75%;" src="/static/img/site/elChubra-min.jpg"/>
+    <img style="margin:0 auto;display:block; width:75%;" alt="lifted subaru" src="/static/img/site/elChubra-min.jpg"/>
 
     <br>
     <button class="accordionClose accordion-action">X</button>
@@ -98,12 +98,12 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/overbiteProject.jpg');" class="item h2 w4" data-id="1" data-category="Crosstrek" data-description="" data-title="Bumper Cutting">
+          <div style="background-image: url('/static/img/guides/cvgrease.jpg');" class="item h2 w4" data-id="1" data-category="generic build" data-description="" data-title="Advice for Longer CV Joints Life">
 
               <div class="card">
-                <!--<div class="card-id">Crosstrek</div> -->
-                <a href="./detail-page/bumper-cutting.html"> <div class="item-content">
-                <div class="card-title">Bumper Cutting</div>
+                <!--<div class="card-id">generic build</div> -->
+                <a href="./detail-page/advice-for-longer-cv-joints-life.html"> <div class="item-content">
+                <div class="card-title">Advice for Longer CV Joints Life</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -111,12 +111,12 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/cvgrease.jpg');" class="item h2 w4" data-id="2" data-category="generic build" data-description="" data-title="Advice for Longer CV Joints Life">
+          <div style="background-image: url('/static/img/guides/overbiteProject.jpg');" class="item h2 w4" data-id="2" data-category="Crosstrek" data-description="" data-title="Bumper Cutting">
 
               <div class="card">
-                <!--<div class="card-id">generic build</div> -->
-                <a href="./detail-page/advice-for-longer-cv-joints-life.html"> <div class="item-content">
-                <div class="card-title">Advice for Longer CV Joints Life</div>
+                <!--<div class="card-id">Crosstrek</div> -->
+                <a href="./detail-page/bumper-cutting.html"> <div class="item-content">
+                <div class="card-title">Bumper Cutting</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -150,26 +150,26 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-id="5" data-category="generic build" data-description="" data-title="DIY: Swing Away Bumper">
-
-              <div class="card">
-                <!--<div class="card-id">generic build</div> -->
-                <a href="./detail-page/diy-swing-away-bumper.html"> <div class="item-content">
-                <div class="card-title">DIY: Swing Away Bumper</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/subaru-history.jpg');" class="item h2 w4" data-id="6" data-category="generic build" data-description="Subaru research and information website" data-title="Cars101.com">
+          <div style="background-image: url('/static/img/guides/subaru-history.jpg');" class="item h2 w4" data-id="5" data-category="generic build" data-description="Subaru research and information website" data-title="Cars101.com">
 
               <div class="card">
                 <!--<div class="card-id">generic build</div> -->
                 <a href="./detail-page/cars101-com.html"> <div class="item-content">
                 <div class="card-title">Cars101.com</div>
                 <div class="card-description">Subaru research and information website</div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-id="6" data-category="generic build" data-description="" data-title="DIY: Swing Away Bumper">
+
+              <div class="card">
+                <!--<div class="card-id">generic build</div> -->
+                <a href="./detail-page/diy-swing-away-bumper.html"> <div class="item-content">
+                <div class="card-title">DIY: Swing Away Bumper</div>
+                <div class="card-description"></div>
                 </a>
                 </div>
               </div>
@@ -254,26 +254,26 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/injectorCleansingProcedure1.jpg');" class="item h2 w4" data-id="13" data-category="generic build" data-description="scrub a dub dub" data-title="Fuel Injector Cleaning">
-
-              <div class="card">
-                <!--<div class="card-id">generic build</div> -->
-                <a href="./detail-page/fuel-injector-cleaning.html"> <div class="item-content">
-                <div class="card-title">Fuel Injector Cleaning</div>
-                <div class="card-description">scrub a dub dub</div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/forester-snorkle1.jpg');" class="item h2 w4" data-id="14" data-category="Forester" data-description="" data-title="2nd Gen Forester Snorkle">
+          <div style="background-image: url('/static/img/guides/forester-snorkle1.jpg');" class="item h2 w4" data-id="13" data-category="Forester" data-description="" data-title="2nd Gen Forester Snorkle">
 
               <div class="card">
                 <!--<div class="card-id">Forester</div> -->
                 <a href="./detail-page/2nd-gen-forester-snorkle.html"> <div class="item-content">
                 <div class="card-title">2nd Gen Forester Snorkle</div>
                 <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/injectorCleansingProcedure1.jpg');" class="item h2 w4" data-id="14" data-category="generic build" data-description="scrub a dub dub" data-title="Fuel Injector Cleaning">
+
+              <div class="card">
+                <!--<div class="card-id">generic build</div> -->
+                <a href="./detail-page/fuel-injector-cleaning.html"> <div class="item-content">
+                <div class="card-title">Fuel Injector Cleaning</div>
+                <div class="card-description">scrub a dub dub</div>
                 </a>
                 </div>
               </div>
@@ -319,26 +319,26 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="18" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
-
-              <div class="card">
-                <!--<div class="card-id">ea82</div> -->
-                <a href="./detail-page/how-to-keep-your-subaru-alive.html"> <div class="item-content">
-                <div class="card-title">How To Keep Your Subaru Alive</div>
-                <div class="card-description">This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/IgnitionModuleTest.jpg');" class="item h2 w4" data-id="19" data-category="ea82" data-description="" data-title="Ignition Module Testing">
+          <div style="background-image: url('/static/img/guides/IgnitionModuleTest.jpg');" class="item h2 w4" data-id="18" data-category="ea82" data-description="" data-title="Ignition Module Testing">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
                 <a href="./detail-page/ignition-module-testing.html"> <div class="item-content">
                 <div class="card-title">Ignition Module Testing</div>
                 <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="19" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
+
+              <div class="card">
+                <!--<div class="card-id">ea82</div> -->
+                <a href="./detail-page/how-to-keep-your-subaru-alive.html"> <div class="item-content">
+                <div class="card-title">How To Keep Your Subaru Alive</div>
+                <div class="card-description">This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</div>
                 </a>
                 </div>
               </div>
@@ -425,7 +425,7 @@
       <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the Video Content, which is provided as is, and without warranties.</p>
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-08.12.18-02.54</p>
+      <p >v1-08.12.18-14.03</p>
     </a>
   </footer>
 
