--- a/list.html
+++ b/list.html
@@ -21,8 +21,8 @@
   <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Lifted Subarus</title>
-  <meta name=”description” content="Curated Offroad Subaru Build Guides.">
+  <title>Lifted Subarus- Curated Offroad Subaru Build Guides & Resources</title>
+  <meta name=:description" content="Curated Offroad Subaru Build Guides.">
   <meta name="Keywords" content="lifted subaru offroad fabrication 4x4">
   <!--  Facebook -->
   <meta property="og:title" content=" " />
@@ -48,7 +48,7 @@
     <p>Stay Muddy Friends,</p>
     <p>-Doug</p>
 
-    <img style="margin:0 auto;display:block; width:75%;" src="/static/img/site/elChubra-min.jpg"/>
+    <img style="margin:0 auto;display:block; width:75%;" alt="lifted subaru" src="/static/img/site/elChubra-min.jpg"/>
 
     <br>
     <button class="accordionClose accordion-action">X</button>
@@ -74,16 +74,6 @@
         <td>  </td>
       </tr>
       <tr>
-        <td>Bumper Cutting</td>
-        <td>
-            <a href="https://www.instagram.com/k12azy13astard/">
-        Joshua Carrion
-            </a>
-      </td>
-        <td> <a href="https://m.imgur.com/a/k516H" class="btn grey-background">Link</a>  </td>
-        <td>  </td>
-      </tr>
-      <tr>
         <td>Advice for Longer CV Joints Life</td>
         <td>
             <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
@@ -92,6 +82,16 @@
       </td>
         <td> <a href="https://www.ultimatesubaru.org/forum/topic/114267-advice-for-longer-cv-joints-life/" class="btn grey-background">Link</a>  </td>
         <td>  <a href="/static/pdf/AdviceforLongerCVJointsLife.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
+        <td>Bumper Cutting</td>
+        <td>
+            <a href="https://www.instagram.com/k12azy13astard/">
+        Joshua Carrion
+            </a>
+      </td>
+        <td> <a href="https://m.imgur.com/a/k516H" class="btn grey-background">Link</a>  </td>
+        <td>  </td>
       </tr>
       <tr>
         <td>Safe Recovery Technique</td>
@@ -110,6 +110,14 @@
         <td>  <a href="/static/pdf/bendin_tubeindex.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
+        <td>Cars101.com</td>
+        <td>
+        Joe Spitz
+      </td>
+        <td> <a href="http://www.cars101.com" class="btn grey-background">Link</a>  </td>
+        <td>  </td>
+      </tr>
+      <tr>
         <td>DIY: Swing Away Bumper</td>
         <td>
             <a href="https://americanadventurist.com/forum/members/fozroamer.3034/">
@@ -118,14 +126,6 @@
       </td>
         <td> <a href="https://americanadventurist.com/forum/threads/subaru-forester-rear-front-bumper-build-pics.3788/" class="btn grey-background">Link</a>  </td>
         <td>  <a href="/static/pdf/subaru-forester-rear-front-bumper-build-pics.pdf" class="btn grey-background">PDF</a>  </td>
-      </tr>
-      <tr>
-        <td>Cars101.com</td>
-        <td>
-        Joe Spitz
-      </td>
-        <td> <a href="http://www.cars101.com" class="btn grey-background">Link</a>  </td>
-        <td>  </td>
       </tr>
       <tr>
         <td>VIDEO: How-To Tune a CB Antennae</td>
@@ -186,16 +186,6 @@
         <td>  <a href="/static/pdf/EJ22-Overhaul.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
-        <td>Fuel Injector Cleaning</td>
-        <td>
-            <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
-        Loyale 2.7 Turbo
-            </a>
-      </td>
-        <td> <a href="https://www.ultimatesubaru.org/forum/topic/151458-easy-fuel-injector-cleansing-procedures/" class="btn grey-background">Link</a>  </td>
-        <td>  <a href="/static/pdf/easy-fuel-injector-cleansing-procedures.pdf" class="btn grey-background">PDF</a>  </td>
-      </tr>
-      <tr>
         <td>2nd Gen Forester Snorkle</td>
         <td>
             <a href="https://www.instagram.com/brianlipke">
@@ -204,6 +194,16 @@
       </td>
         <td>  </td>
         <td>  </td>
+      </tr>
+      <tr>
+        <td>Fuel Injector Cleaning</td>
+        <td>
+            <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
+        Loyale 2.7 Turbo
+            </a>
+      </td>
+        <td> <a href="https://www.ultimatesubaru.org/forum/topic/151458-easy-fuel-injector-cleansing-procedures/" class="btn grey-background">Link</a>  </td>
+        <td>  <a href="/static/pdf/easy-fuel-injector-cleansing-procedures.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
         <td>DIY Head Porting</td>
@@ -232,14 +232,6 @@
         <td>  <a href="/static/pdf/Hitachicarburetor.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
-        <td>How To Keep Your Subaru Alive</td>
-        <td>
-        Larry Owens
-      </td>
-        <td>  </td>
-        <td>  <a href="/static/pdf/howToKeepYourSubaruAlive.pdf" class="btn grey-background">PDF</a>  </td>
-      </tr>
-      <tr>
         <td>Ignition Module Testing</td>
         <td>
             <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
@@ -248,6 +240,14 @@
       </td>
         <td> <a href="https://www.ultimatesubaru.org/forum/topic/129601-how-to-easily-test-an-ignition-module/" class="btn grey-background">Link</a>  </td>
         <td>  <a href="/static/pdf/how-to-easily-test-an-ignition-module.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
+        <td>How To Keep Your Subaru Alive</td>
+        <td>
+        Larry Owens
+      </td>
+        <td>  </td>
+        <td>  <a href="/static/pdf/howToKeepYourSubaruAlive.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
         <td>DIY: Welded Differential</td>
@@ -306,7 +306,7 @@
       <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the Video Content, which is provided as is, and without warranties.</p>
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-08.12.18-02.54</p>
+      <p >v1-08.12.18-14.03</p>
     </a>
   </footer>
 
