--- a/index.html
+++ b/index.html
@@ -150,26 +150,26 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/subaru-history.jpg');" class="item h2 w4" data-id="5" data-category="generic build" data-description="Subaru research and information website" data-title="Cars101.com">
-
-              <div class="card">
-                <!--<div class="card-id">generic build</div> -->
-                <a href="./detail-page/cars101-com.html"> <div class="item-content">
-                <div class="card-title">Cars101.com</div>
-                <div class="card-description">Subaru research and information website</div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-id="6" data-category="generic build" data-description="" data-title="DIY: Swing Away Bumper">
+          <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-id="5" data-category="generic build" data-description="" data-title="DIY: Swing Away Bumper">
 
               <div class="card">
                 <!--<div class="card-id">generic build</div> -->
                 <a href="./detail-page/diy-swing-away-bumper.html"> <div class="item-content">
                 <div class="card-title">DIY: Swing Away Bumper</div>
                 <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/subaru-history.jpg');" class="item h2 w4" data-id="6" data-category="generic build" data-description="Subaru research and information website" data-title="Cars101.com">
+
+              <div class="card">
+                <!--<div class="card-id">generic build</div> -->
+                <a href="./detail-page/cars101-com.html"> <div class="item-content">
+                <div class="card-title">Cars101.com</div>
+                <div class="card-description">Subaru research and information website</div>
                 </a>
                 </div>
               </div>
@@ -345,26 +345,26 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/diffwelding.gif');" class="item h2 w4" data-id="20" data-category="generic build" data-description="" data-title="DIY: Welded Differential">
-
-              <div class="card">
-                <!--<div class="card-id">generic build</div> -->
-                <a href="./detail-page/diy-welded-differential.html"> <div class="item-content">
-                <div class="card-title">DIY: Welded Differential</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="21" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
+          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="20" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
                 <a href="./detail-page/cooler-thermoswitch.html"> <div class="item-content">
                 <div class="card-title">Cooler Thermoswitch</div>
                 <div class="card-description">Get your electric fan to switch on at a lower temp</div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/diffwelding.gif');" class="item h2 w4" data-id="21" data-category="generic build" data-description="" data-title="DIY: Welded Differential">
+
+              <div class="card">
+                <!--<div class="card-id">generic build</div> -->
+                <a href="./detail-page/diy-welded-differential.html"> <div class="item-content">
+                <div class="card-title">DIY: Welded Differential</div>
+                <div class="card-description"></div>
                 </a>
                 </div>
               </div>
@@ -425,7 +425,7 @@
       <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the Video Content, which is provided as is, and without warranties.</p>
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-08.12.18-14.03</p>
+      <p >v1-08.12.18-18.05</p>
     </a>
   </footer>
 
@@ -433,8 +433,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script src="https://unpkg.com/muuri@0.6.2/dist/muuri.js"></script>
-  <script src="/scripts/script.js"></script>
-  <script src="/scripts/accordion.js"></script>
+  <script src="/scripts/script-min.js"></script>
+  <script src="/scripts/accordion-min.js"></script>
 
 </body>
 
