--- a/list.html
+++ b/list.html
@@ -110,14 +110,6 @@
         <td>  <a href="/static/pdf/bendin_tubeindex.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
-        <td>Cars101.com</td>
-        <td>
-        Joe Spitz
-      </td>
-        <td> <a href="http://www.cars101.com" class="btn grey-background">Link</a>  </td>
-        <td>  </td>
-      </tr>
-      <tr>
         <td>DIY: Swing Away Bumper</td>
         <td>
             <a href="https://americanadventurist.com/forum/members/fozroamer.3034/">
@@ -126,6 +118,14 @@
       </td>
         <td> <a href="https://americanadventurist.com/forum/threads/subaru-forester-rear-front-bumper-build-pics.3788/" class="btn grey-background">Link</a>  </td>
         <td>  <a href="/static/pdf/subaru-forester-rear-front-bumper-build-pics.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
+        <td>Cars101.com</td>
+        <td>
+        Joe Spitz
+      </td>
+        <td> <a href="http://www.cars101.com" class="btn grey-background">Link</a>  </td>
+        <td>  </td>
       </tr>
       <tr>
         <td>VIDEO: How-To Tune a CB Antennae</td>
@@ -250,14 +250,6 @@
         <td>  <a href="/static/pdf/howToKeepYourSubaruAlive.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
-        <td>DIY: Welded Differential</td>
-        <td>
-        
-      </td>
-        <td> <a href="http://www.fourwheeler.com/how-to/transmission-drivetrain/154-1106-jeep-differential-welding-101/photo-01.html" class="btn grey-background">Link</a>  </td>
-        <td>  </td>
-      </tr>
-      <tr>
         <td>Cooler Thermoswitch</td>
         <td>
             <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
@@ -266,6 +258,14 @@
       </td>
         <td> <a href="https://www.ultimatesubaru.org/forum/topic/123869-cooler-temp-thermoswitch/" class="btn grey-background">Link</a>  </td>
         <td>  <a href="/static/pdf//static/pdf/cooler-temp-thermoswitch.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
+        <td>DIY: Welded Differential</td>
+        <td>
+        
+      </td>
+        <td> <a href="http://www.fourwheeler.com/how-to/transmission-drivetrain/154-1106-jeep-differential-welding-101/photo-01.html" class="btn grey-background">Link</a>  </td>
+        <td>  </td>
       </tr>
       <tr>
         <td>DIY Fender Cutting &amp; Rolling</td>
@@ -306,7 +306,7 @@
       <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the Video Content, which is provided as is, and without warranties.</p>
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-08.12.18-14.03</p>
+      <p >v1-08.12.18-18.05</p>
     </a>
   </footer>
 
@@ -314,8 +314,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script src="https://unpkg.com/muuri@0.6.2/dist/muuri.js"></script>
-  <script src="/scripts/script.js"></script>
-  <script src="/scripts/accordion.js"></script>
+  <script src="/scripts/script-min.js"></script>
+  <script src="/scripts/accordion-min.js"></script>
 
 </body>
 
