--- a/detail-page/diy-welded-differential.html
+++ b/detail-page/diy-welded-differential.html
@@ -77,7 +77,7 @@
       <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the Video Content, which is provided as is, and without warranties.</p>
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-08.12.18-14.03</p>
+      <p >v1-08.12.18-18.05</p>
     </a>
   </footer>
 
@@ -85,8 +85,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script src="https://unpkg.com/muuri@0.6.2/dist/muuri.js"></script>
-  <script src="/scripts/script.js"></script>
-  <script src="/scripts/accordion.js"></script>
+  <script src="/scripts/script-min.js"></script>
+  <script src="/scripts/accordion-min.js"></script>
 
 </body>
 
