typo fix on description meta

--- a/detail-page/safe-recovery-technique.html
+++ b/detail-page/safe-recovery-technique.html
@@ -22,7 +22,7 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lifted Subarus- Curated Offroad Subaru Build Guides & Resources</title>
-  <meta name=:description" content="Curated Offroad Subaru Build Guides.">
+  <meta name="description" content="Curated Offroad Subaru Build Guides.">
   <meta name="Keywords" content="lifted subaru offroad fabrication 4x4">
   <!--  Facebook -->
   <meta property="og:title" content="  Safe Recovery Technique " />
@@ -49,7 +49,7 @@
     <p>Stay Muddy Friends,</p>
     <p>-Doug</p>
 
-    <img style="margin:0 auto;display:block; width:75%;" alt="lifted subaru" src="/static/img/site/elChubra-min.jpg"/>
+    <img style="margin:0 auto;display:block; width:75%;" alt="lifted subaru 4x4" title="lifted subaru 4x4" src="/static/img/site/elChubra-min.jpg"/>
 
     <br>
     <button class="accordionClose accordion-action">X</button>
@@ -78,7 +78,7 @@
       <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the Video Content, which is provided as is, and without warranties.</p>
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-08.12.18-18.05</p>
+      <p >v1-08.12.18-26.00</p>
     </a>
   </footer>
 
