--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lifted Subarus- Curated Offroad Subaru Build Guides & Resources</title>
-  <meta name=:description" content="Curated Offroad Subaru Build Guides.">
+  <meta name="description" content="Curated Offroad Subaru Build Guides.">
   <meta name="Keywords" content="lifted subaru offroad fabrication 4x4">
   <!--  Facebook -->
   <meta property="og:title" content="Lifted Subarus " />
@@ -48,7 +48,7 @@
     <p>Stay Muddy Friends,</p>
     <p>-Doug</p>
 
-    <img style="margin:0 auto;display:block; width:75%;" alt="lifted subaru" src="/static/img/site/elChubra-min.jpg"/>
+    <img style="margin:0 auto;display:block; width:75%;" alt="lifted subaru 4x4" title="lifted subaru 4x4" src="/static/img/site/elChubra-min.jpg"/>
 
     <br>
     <button class="accordionClose accordion-action">X</button>
@@ -293,12 +293,12 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/hitachiLinkage.gif');" class="item h2 w4" data-id="16" data-category="ea82" data-description="" data-title="Mechanical Conversion on Hitachi Carbs">
+          <div style="background-image: url('/static/img/guides/hitachi-rebuild.png');" class="item h2 w4" data-id="16" data-category="ea82" data-description="" data-title="Hitachi Carb Rebuild">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
-                <a href="./detail-page/mechanical-conversion-on-hitachi-carbs.html"> <div class="item-content">
-                <div class="card-title">Mechanical Conversion on Hitachi Carbs</div>
+                <a href="./detail-page/hitachi-carb-rebuild.html"> <div class="item-content">
+                <div class="card-title">Hitachi Carb Rebuild</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -306,12 +306,12 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/hitachi-rebuild.png');" class="item h2 w4" data-id="17" data-category="ea82" data-description="" data-title="Hitachi Carb Rebuild">
+          <div style="background-image: url('/static/img/guides/hitachiLinkage.gif');" class="item h2 w4" data-id="17" data-category="ea82" data-description="" data-title="Mechanical Conversion on Hitachi Carbs">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
-                <a href="./detail-page/hitachi-carb-rebuild.html"> <div class="item-content">
-                <div class="card-title">Hitachi Carb Rebuild</div>
+                <a href="./detail-page/mechanical-conversion-on-hitachi-carbs.html"> <div class="item-content">
+                <div class="card-title">Mechanical Conversion on Hitachi Carbs</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -345,26 +345,26 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="20" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
-
-              <div class="card">
-                <!--<div class="card-id">ea82</div> -->
-                <a href="./detail-page/cooler-thermoswitch.html"> <div class="item-content">
-                <div class="card-title">Cooler Thermoswitch</div>
-                <div class="card-description">Get your electric fan to switch on at a lower temp</div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/diffwelding.gif');" class="item h2 w4" data-id="21" data-category="generic build" data-description="" data-title="DIY: Welded Differential">
+          <div style="background-image: url('/static/img/guides/diffwelding.gif');" class="item h2 w4" data-id="20" data-category="generic build" data-description="" data-title="DIY: Welded Differential">
 
               <div class="card">
                 <!--<div class="card-id">generic build</div> -->
                 <a href="./detail-page/diy-welded-differential.html"> <div class="item-content">
                 <div class="card-title">DIY: Welded Differential</div>
                 <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="21" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
+
+              <div class="card">
+                <!--<div class="card-id">ea82</div> -->
+                <a href="./detail-page/cooler-thermoswitch.html"> <div class="item-content">
+                <div class="card-title">Cooler Thermoswitch</div>
+                <div class="card-description">Get your electric fan to switch on at a lower temp</div>
                 </a>
                 </div>
               </div>
@@ -425,7 +425,7 @@
       <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the Video Content, which is provided as is, and without warranties.</p>
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-08.12.18-18.05</p>
+      <p >v1-08.12.18-26.00</p>
     </a>
   </footer>
 
